# SorryYouthImagine

./: .gitignore  Cargo.toml  README.md  example.env  settings.rs
.cargo/: config.toml
diesel_migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
diesel_migrations/2023-07-25-033047_create_users/: up.sql
diesel_migrations/2023-10-29-121255_create_some_schema/: up.sql
entity/: Cargo.toml
entity/src/: images.rs  mod.rs  prelude.rs  settings.rs  users.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231102_032212_define_schema.rs
migrations/2023-07-22-070032_create_users/: up.sql
migrations/2023-07-22-070129_create_images/: up.sql
migrations/2023-07-24-031930_create_images/: up.sql
migrations/2023-07-24-040031_create_images/: up.sql
migrations/2023-07-24-060335_create_images/: down.sql  up.sql
migrations/2023-07-28-170035_create_users/: up.sql
migrations/2023-10-29-070715_server_settings/: up.sql
migrations/2023-10-29-121255_create_some_schema/: down.sql
src/: config.example.yml  lib.rs  main.rs  models.rs  schema.rs
src/db/: images.rs  mod.rs  user.rs  users.rs
src/routes/: images.rs  mod.rs  ping.rs  user.rs
src/routes/image/: mod.rs
tests/: images_create.http  user_create.http
