[package]
name = "sorry_youth_imagine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
